Fixed settings page overflow behaviour

--- a/app/modal/modal.css
+++ b/app/modal/modal.css
@@ -31,7 +31,7 @@
     top: 5%;
     width: 90%;
     height: 90%;
-    overflow-y: scroll;
+    overflow-y: auto;
 }
 
 #overlay {
